--- a/growth.html
+++ b/growth.html
@@ -5,166 +5,201 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Child Growth - CCHIS</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="css/doctor-theme.css">
 </head>
 
 <body>
     <!-- Sidebar -->
     <nav class="sidebar">
         <div class="sidebar-header">
-            <div class="sidebar-brand"><i class="fas fa-heartbeat"></i> CCHIS</div>
+            <i class="fas fa-heartbeat" style="margin-right: 10px;"></i> CCHIS
         </div>
         <div class="sidebar-menu">
             <a href="doctor-dashboard.html" class="menu-item">
-                <i class="fas fa-home"></i> Dashboard
+                <i class="fas fa-home"></i> <span>Dashboard</span>
             </a>
             <a href="profiles.html" class="menu-item">
-                <i class="fas fa-users"></i> Profiles
+                <i class="fas fa-users"></i> <span>Patient List</span>
             </a>
             <a href="postpartum.html" class="menu-item">
-                <i class="fas fa-procedures"></i> Postpartum
+                <i class="fas fa-procedures"></i> <span>Postpartum</span>
             </a>
             <a href="growth.html" class="menu-item active">
-                <i class="fas fa-baby"></i> Child Growth
+                <i class="fas fa-baby"></i> <span>Child Growth</span>
             </a>
             <a href="reports.html" class="menu-item">
-                <i class="fas fa-chart-bar"></i> Reports
+                <i class="fas fa-chart-bar"></i> <span>Reports</span>
             </a>
             <a href="appointment-requests.html" class="menu-item">
-                <i class="fas fa-calendar-check"></i> Appointments
+                <i class="fas fa-calendar-check"></i> <span>Requests</span>
             </a>
             <a href="index.html" class="menu-item"
-                style="margin-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1);">
-                <i class="fas fa-sign-out-alt"></i> Logout
+                style="margin-top: auto; border-top: 1px solid rgba(255,255,255,0.1);">
+                <i class="fas fa-sign-out-alt"></i> <span>Logout</span>
             </a>
         </div>
     </nav>
 
+    <!-- Top Navigation Bar -->
+    <header class="top-bar">
+        <div class="search-bar">
+            <i class="fas fa-search"></i>
+            <input type="text" placeholder="Search child records...">
+        </div>
+        <div class="user-nav">
+            <div class="notification-bell">
+                <i class="fas fa-bell"></i>
+                <span class="notification-badge">5</span>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <div style="text-align: right; line-height: 1.2;">
+                    <div style="font-weight: 600; font-size: 14px;">Dr. Maria Clara</div>
+                    <div style="font-size: 11px; color: var(--text-secondary);">Midwife</div>
+                </div>
+                <div
+                    style="width: 36px; height: 36px; background: var(--primary-color); color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 600;">
+                    MC</div>
+            </div>
+        </div>
+    </header>
+
     <!-- Main Content -->
     <main class="main-content">
-        <div class="top-bar">
-            <h2>Child Growth & Development</h2>
-            <div class="user-profile">
-                <div class="notification-bell" style="margin-right: 1.5rem; position: relative; cursor: pointer;">
-                    <i class="fas fa-bell" style="font-size: 1.2rem; color: var(--text-muted);"></i>
-                    <span class="badge"
-                        style="position: absolute; top: -5px; right: -5px; background: var(--danger-color); color: white; border-radius: 50%; padding: 2px 5px; font-size: 0.7rem;">5</span>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;">
+            <h1>Child Growth & Development</h1>
+
+            <!-- Child Selector -->
+            <div
+                style="display: flex; align-items: center; gap: 12px; background: white; padding: 8px 16px; border-radius: var(--radius-md); box-shadow: var(--shadow-sm);">
+                <div
+                    style="width: 32px; height: 32px; background: #E3F2FD; color: #1565C0; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                    <i class="fas fa-baby"></i>
                 </div>
-                <div class="user-avatar">MC</div>
                 <div>
-                    <div style="font-weight: 600;">Dr. Maria Clara</div>
-                    <div style="font-size: 0.8rem; color: var(--text-muted);">Midwife</div>
+                    <div style="font-weight: 600; font-size: 13px;">Juan Santos</div>
+                    <div style="font-size: 11px; color: var(--text-secondary);">3 months • Male</div>
                 </div>
+                <button class="btn btn-sm btn-secondary" style="margin-left: 12px;">Change</button>
             </div>
         </div>
 
-        <!-- Child Selector (Mock) -->
-        <div class="card mb-3 animate-slide-up delay-100">
-            <div class="d-flex align-center justify-between">
-                <div class="d-flex align-center">
-                    <div
-                        style="width: 50px; height: 50px; background: #eee; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 1rem;">
-                        <i class="fas fa-baby" style="font-size: 1.5rem; color: #666;"></i>
-                    </div>
-                    <div>
-                        <h3 style="margin: 0;">Juan Santos</h3>
-                        <p class="text-muted" style="margin: 0;">3 months old • Male</p>
-                    </div>
-                </div>
-                <button class="btn btn-outline">Change Child</button>
-            </div>
+        <!-- Tabs -->
+        <div class="tabs">
+            <button class="tab-btn active" onclick="switchTab('t-charts', 'c-charts')" id="t-charts">Growth
+                Charts</button>
+            <button class="tab-btn" onclick="switchTab('t-milestones', 'c-milestones')"
+                id="t-milestones">Milestones</button>
+            <button class="tab-btn" onclick="switchTab('t-immunizations', 'c-immunizations')"
+                id="t-immunizations">Immunizations</button>
         </div>
 
-        <div class="d-flex" style="gap: 1.5rem; flex-wrap: wrap;">
-            <!-- Growth Charts Section -->
-            <div style="flex: 2; min-width: 400px;" class="animate-slide-up delay-200">
+        <!-- Growth Charts Tab -->
+        <div id="c-charts" class="tab-content active">
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px;">
                 <div class="card">
-                    <div class="card-header">Growth Charts</div>
-                    <div class="tabs mb-2">
-                        <button class="tab-btn active" onclick="switchTab('t-weight', 'c-weight')"
-                            id="t-weight">Weight-for-Age</button>
-                        <button class="tab-btn" onclick="switchTab('t-height', 'c-height')"
-                            id="t-height">Length-for-Age</button>
+                    <div class="card-header">
+                        <span>Weight-for-Age</span>
+                        <button class="btn btn-sm btn-primary"><i class="fas fa-plus"></i> Record</button>
                     </div>
-
-                    <div id="c-weight" class="tab-content active">
+                    <div style="height: 300px;">
                         <canvas id="weightChart"></canvas>
                     </div>
-                    <div id="c-height" class="tab-content">
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <span>Length-for-Age</span>
+                        <button class="btn btn-sm btn-primary"><i class="fas fa-plus"></i> Record</button>
+                    </div>
+                    <div style="height: 300px;">
                         <canvas id="heightChart"></canvas>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <!-- Immunization Schedule -->
-                <div class="card">
-                    <div class="card-header">Immunization Schedule</div>
-                    <div class="table-responsive">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Vaccine</th>
-                                    <th>Age Due</th>
-                                    <th>Date Given</th>
-                                    <th>Status</th>
-                                </tr>
-                            </thead>
-                            <tbody id="imm-table-body">
-                                <!-- Populated by JS -->
-                            </tbody>
-                        </table>
-                    </div>
+        <!-- Milestones Tab -->
+        <div id="c-milestones" class="tab-content">
+            <div class="card">
+                <div class="card-header">
+                    <span>Development Milestones</span>
+                    <button class="btn btn-sm btn-secondary">Add Custom</button>
+                </div>
+
+                <div style="margin-bottom: 24px;">
+                    <h4
+                        style="background: #F8F9FA; padding: 8px 12px; border-radius: 4px; font-size: 13px; color: var(--text-secondary);">
+                        0-3 Months</h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li
+                            style="padding: 12px; border-bottom: 1px solid var(--border-color); display: flex; align-items: center; justify-content: space-between;">
+                            <label style="display: flex; align-items: center; gap: 12px; cursor: pointer;">
+                                <input type="checkbox" checked disabled>
+                                <span style="text-decoration: line-through; color: var(--text-secondary);">Holds head up
+                                    when on tummy</span>
+                            </label>
+                            <span class="badge bg-normal">Completed Dec 12</span>
+                        </li>
+                        <li
+                            style="padding: 12px; border-bottom: 1px solid var(--border-color); display: flex; align-items: center; justify-content: space-between;">
+                            <label style="display: flex; align-items: center; gap: 12px; cursor: pointer;">
+                                <input type="checkbox" checked disabled>
+                                <span style="text-decoration: line-through; color: var(--text-secondary);">Smiles at
+                                    people</span>
+                            </label>
+                            <span class="badge bg-normal">Completed Dec 20</span>
+                        </li>
+                        <li
+                            style="padding: 12px; border-bottom: 1px solid var(--border-color); display: flex; align-items: center; justify-content: space-between;">
+                            <label style="display: flex; align-items: center; gap: 12px; cursor: pointer;">
+                                <input type="checkbox">
+                                <span>Follows objects with eyes</span>
+                            </label>
+                            <span class="badge bg-warning">Pending</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4
+                        style="background: #F8F9FA; padding: 8px 12px; border-radius: 4px; font-size: 13px; color: var(--text-secondary);">
+                        4-6 Months</h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li
+                            style="padding: 12px; border-bottom: 1px solid var(--border-color); display: flex; align-items: center; justify-content: space-between;">
+                            <label style="display: flex; align-items: center; gap: 12px; cursor: pointer;">
+                                <input type="checkbox">
+                                <span>Rolls over in both directions</span>
+                            </label>
+                            <span class="badge" style="background: #eee; color: #666;">Upcoming</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </div>
 
-            <!-- Side Panel: Milestones & Alerts -->
-            <div style="flex: 1; min-width: 300px;" class="animate-slide-up delay-300">
-                <!-- Alerts -->
-                <div class="card bg-warning"
-                    style="background-color: rgba(255, 193, 7, 0.1); border: 1px solid var(--warning-color);">
-                    <div class="card-header" style="border-bottom-color: rgba(0,0,0,0.05);">Alerts</div>
-                    <ul style="list-style: none;">
-                        <li class="mb-2"><i class="fas fa-exclamation-circle text-danger"></i> Missed: Polio 1 (Overdue)
-                        </li>
-                        <li><i class="fas fa-info-circle text-primary"></i> Upcoming: DPT 2 (Due in 2 weeks)</li>
-                    </ul>
-                </div>
-
-                <!-- Milestones -->
-                <div class="card">
-                    <div class="card-header">Development Milestones</div>
-                    <div class="mb-2"><strong>0-3 Months</strong></div>
-                    <ul style="list-style: none;">
-                        <li class="mb-2">
-                            <label class="d-flex align-center">
-                                <input type="checkbox" checked disabled>
-                                <span style="margin-left: 0.5rem;">Holds head up</span>
-                            </label>
-                        </li>
-                        <li class="mb-2">
-                            <label class="d-flex align-center">
-                                <input type="checkbox" checked disabled>
-                                <span style="margin-left: 0.5rem;">Smiles at people</span>
-                            </label>
-                        </li>
-                        <li class="mb-2">
-                            <label class="d-flex align-center">
-                                <input type="checkbox">
-                                <span style="margin-left: 0.5rem;">Follows objects with eyes</span>
-                            </label>
-                        </li>
-                    </ul>
-
-                    <div class="mb-2 mt-3"><strong>4-6 Months</strong></div>
-                    <ul style="list-style: none;">
-                        <li class="mb-2">
-                            <label class="d-flex align-center">
-                                <input type="checkbox">
-                                <span style="margin-left: 0.5rem;">Rolls over</span>
-                            </label>
-                        </li>
-                    </ul>
+        <!-- Immunizations Tab -->
+        <div id="c-immunizations" class="tab-content">
+            <div class="card" style="padding: 0; overflow: hidden;">
+                <div class="table-responsive" style="border: none; border-radius: 0;">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Vaccine</th>
+                                <th>Scheduled Age</th>
+                                <th>Date Given</th>
+                                <th>Status</th>
+                                <th style="text-align: right;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="imm-table-body">
+                            <!-- Populated by JS -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
