--- a/mother-dashboard.html
+++ b/mother-dashboard.html
@@ -5,31 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Dashboard - CCHIS</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        /* Mother-specific styles */
-        :root {
-            --primary-color: #ff8fa3;
-            /* Softer pink/red */
-            --secondary-color: #fff0f3;
-            --accent-color: #ffccd5;
-        }
-
-        .sidebar {
-            background: linear-gradient(180deg, #ff8fa3 0%, #ff4d6d 100%);
-        }
-
-        .sidebar-menu .menu-item:hover,
-        .sidebar-menu .menu-item.active {
-            background: rgba(255, 255, 255, 0.2);
-        }
-
-        .card-icon-bg {
-            background: var(--secondary-color);
-            color: var(--primary-color);
-        }
-    </style>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Keep for utilities if needed -->
+    <link rel="stylesheet" href="css/mother-theme.css"> <!-- New Theme -->
 </head>
 
 <body>
@@ -52,10 +34,15 @@
                 <i class="fas fa-calendar-alt"></i> My Appointments
             </a>
             <a href="my-records.html" class="menu-item">
-                <i class="fas fa-file-medical"></i> My Records
+                <i class="fas fa-file-medical"></i> Medical Records
             </a>
-            <a href="index.html" class="menu-item"
-                style="margin-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1);">
+            <a href="#" class="menu-item">
+                <i class="fas fa-book-medical"></i> Health Resources
+            </a>
+            <a href="#" class="menu-item">
+                <i class="fas fa-comment-medical"></i> Contact Health Worker
+            </a>
+            <a href="index.html" class="menu-item" style="margin-top: auto; color: var(--error-color);">
                 <i class="fas fa-sign-out-alt"></i> Logout
             </a>
         </div>
@@ -63,107 +50,217 @@
 
     <!-- Main Content -->
     <main class="main-content">
-        <div class="top-bar">
-            <h2>My Dashboard</h2>
-            <div class="user-profile">
-                <div class="notification-bell" style="margin-right: 1.5rem; position: relative; cursor: pointer;">
-                    <i class="fas fa-bell" style="font-size: 1.2rem; color: var(--text-muted);"></i>
-                    <span class="badge"
-                        style="position: absolute; top: -5px; right: -5px; background: var(--danger-color); color: white; border-radius: 50%; padding: 2px 5px; font-size: 0.7rem;">2</span>
-                </div>
-                <div class="user-avatar" style="background: var(--primary-color);">EM</div>
-                <div>
-                    <div style="font-weight: 600;">Ella Martinez</div>
-                    <div style="font-size: 0.8rem; color: var(--text-muted);">Mother</div>
-                </div>
+        <!-- Header Section -->
+        <div class="dashboard-header">
+            <div>
+                <h1>Welcome back, Ella! 👋</h1>
+                <p class="text-muted" style="font-size: 16px;">Good morning! Here's your health overview</p>
             </div>
+            <a href="index.html" class="btn btn-text">Logout</a>
         </div>
 
-        <!-- Welcome Section -->
-        <div class="card animate-slide-up delay-100 mb-4"
-            style="background: linear-gradient(135deg, #fff0f3 0%, #ffffff 100%); border-left: 5px solid var(--primary-color);">
-            <h3 style="color: #d63384;">Welcome back, Ella!</h3>
-            <p class="text-muted">Here's a quick overview of your health journey.</p>
-        </div>
-
-        <!-- Stats Grid -->
-        <div class="stats-grid mb-4">
-            <div class="stat-card animate-slide-up delay-200">
-                <div class="stat-icon" style="background: #e3f2fd; color: #0d6efd;">
+        <!-- Quick Stats Cards (2x2 Grid) -->
+        <div class="stats-grid">
+            <!-- Next Appointment -->
+            <div class="stat-card">
+                <div class="stat-icon" style="background: #E3F2FD; color: #1565C0;">
                     <i class="fas fa-calendar-day"></i>
                 </div>
-                <div class="stat-info">
-                    <h3>Next Appointment</h3>
-                    <p class="text-muted" id="my-next-appt">No upcoming appointments</p>
-                </div>
+                <div class="stat-title">Next Appt</div>
+                <div class="stat-value" id="my-next-appt">Jan 10</div>
+                <div class="text-small text-muted">10:00 AM with Dr. Santos</div>
             </div>
-            <div class="stat-card animate-slide-up delay-300">
-                <div class="stat-icon" style="background: #e6fcf5; color: #0ca678;">
+
+            <!-- Next Vaccine -->
+            <div class="stat-card">
+                <div class="stat-icon" style="background: #E8F5E9; color: #2E7D32;">
                     <i class="fas fa-syringe"></i>
                 </div>
-                <div class="stat-info">
-                    <h3>Next Vaccine</h3>
-                    <p class="text-muted" id="my-next-vaccine">Due in 2 weeks</p>
-                </div>
+                <div class="stat-title">Next Vaccine</div>
+                <div class="stat-value" id="my-next-vaccine">Pentavalent 1</div>
+                <div class="text-small text-muted">Due in 2 weeks</div>
             </div>
-            <div class="stat-card animate-slide-up delay-400">
-                <div class="stat-icon" style="background: #fff9db; color: #f59f00;">
-                    <i class="fas fa-baby-carriage"></i>
+
+            <!-- Status -->
+            <div class="stat-card">
+                <div class="stat-icon" style="background: #FFF3E0; color: #E65100;">
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <div class="stat-info">
-                    <h3>Postpartum Status</h3>
-                    <p class="text-muted" id="my-pp-status"><span class="badge bg-normal">Safe</span></p>
+                <div class="stat-title">Status</div>
+                <div class="stat-value" id="my-pp-status">Safe</div>
+                <div class="text-small text-muted">All vitals normal</div>
+            </div>
+
+            <!-- Notifications -->
+            <div class="stat-card">
+                <div class="stat-icon" style="background: #F3E5F5; color: #7B1FA2;">
+                    <i class="fas fa-bell"></i>
                 </div>
+                <div class="stat-title">Notifications</div>
+                <div class="stat-value">3 New</div>
+                <div class="text-small text-muted">Check updates</div>
             </div>
         </div>
 
-        <div class="grid-container" style="display: grid; grid-template-columns: 2fr 1fr; gap: 1.5rem;">
-            <!-- Postpartum Journey -->
-            <div class="card animate-slide-up delay-500">
-                <h3 class="mb-3">My Postpartum Journey</h3>
-                <div class="timeline" style="position: relative; padding-left: 2rem; border-left: 2px solid #eee;">
-                    <div class="timeline-item mb-4" style="position: relative;">
-                        <div
-                            style="position: absolute; left: -2.6rem; background: var(--primary-color); color: white; width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-check"></i>
+        <!-- Main Content Grid -->
+        <div class="grid-container">
+            <!-- Left Column -->
+            <div class="left-column">
+                <!-- My Postpartum Journey -->
+                <div class="card">
+                    <h3>My Postpartum Journey</h3>
+                    <div class="timeline" style="margin-top: 24px;">
+                        <!-- Item 1 -->
+                        <div class="timeline-item">
+                            <div class="timeline-connector">
+                                <div class="timeline-dot" style="background: var(--success-color); color: white;">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="timeline-line"></div>
+                            </div>
+                            <div class="timeline-content">
+                                <div style="display: flex; justify-content: space-between; margin-bottom: 4px;">
+                                    <strong>48 Hours</strong>
+                                    <span class="text-muted text-small">Nov 16</span>
+                                </div>
+                                <span class="badge badge-safe">Completed</span>
+                            </div>
                         </div>
-                        <h4>48-Hour Visit</h4>
-                        <p class="text-muted mb-1">Completed on Dec 12, 2023</p>
-                        <span class="badge bg-normal">Normal Findings</span>
-                    </div>
-                    <div class="timeline-item mb-4" style="position: relative;">
-                        <div
-                            style="position: absolute; left: -2.6rem; background: #eee; color: #666; width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-clock"></i>
+
+                        <!-- Item 2 -->
+                        <div class="timeline-item">
+                            <div class="timeline-connector">
+                                <div class="timeline-dot" style="background: var(--success-color); color: white;">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="timeline-line"></div>
+                            </div>
+                            <div class="timeline-content">
+                                <div style="display: flex; justify-content: space-between; margin-bottom: 4px;">
+                                    <strong>7 Days</strong>
+                                    <span class="text-muted text-small">Nov 22</span>
+                                </div>
+                                <span class="badge badge-safe">Completed</span>
+                            </div>
                         </div>
-                        <h4>7-Day Visit</h4>
-                        <p class="text-muted mb-1">Due on Dec 19, 2023</p>
-                        <button class="btn btn-sm btn-outline">Schedule Now</button>
-                    </div>
-                    <div class="timeline-item" style="position: relative;">
-                        <div
-                            style="position: absolute; left: -2.6rem; background: #eee; color: #666; width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-calendar"></i>
+
+                        <!-- Item 3 -->
+                        <div class="timeline-item">
+                            <div class="timeline-connector">
+                                <div class="timeline-dot" style="background: var(--warning-color); color: white;">
+                                    <i class="fas fa-clock"></i>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <div style="display: flex; justify-content: space-between; margin-bottom: 4px;">
+                                    <strong>6 Weeks</strong>
+                                    <span class="text-muted text-small">Jan 10</span>
+                                </div>
+                                <span class="badge badge-warning">Upcoming</span>
+                            </div>
                         </div>
-                        <h4>6-Week Visit</h4>
-                        <p class="text-muted mb-1">Due on Jan 25, 2024</p>
                     </div>
+                    <div style="margin-top: 16px; padding-top: 16px; border-top: 1px solid var(--border-color);">
+                        <strong>Overall Status: </strong> <span class="badge badge-safe">Safe 🟢</span>
+                    </div>
+                </div>
+
+                <!-- My Child's Progress -->
+                <div class="card">
+                    <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 16px;">
+                        <div style="font-size: 24px;">👶</div>
+                        <h3>Baby Martinez's Progress</h3>
+                    </div>
+
+                    <div class="grid-2-col" style="display: grid; gap: 16px; margin-bottom: 24px;">
+                        <div>
+                            <div class="text-muted text-small">Age</div>
+                            <div style="font-weight: 600;">6 weeks</div>
+                        </div>
+                        <div>
+                            <div class="text-muted text-small">Weight / Height</div>
+                            <div style="font-weight: 600;">4.2 kg / 52 cm</div>
+                        </div>
+                    </div>
+
+                    <div style="margin-bottom: 24px;">
+                        <div style="display: flex; justify-content: space-between; margin-bottom: 8px;">
+                            <span class="text-small font-weight-bold">Vaccination Progress</span>
+                            <span class="text-small text-muted">8/12 Vaccines</span>
+                        </div>
+                        <div class="progress-container">
+                            <div class="progress-bar" style="width: 66%;"></div>
+                        </div>
+                    </div>
+
+                    <div
+                        style="background: var(--background-color); padding: 16px; border-radius: var(--radius-sm); margin-bottom: 24px;">
+                        <div class="text-small text-muted" style="margin-bottom: 4px;">Next Milestone</div>
+                        <div style="font-weight: 600;">Holds head steady</div>
+                    </div>
+
+                    <a href="my-child.html" class="btn btn-secondary" style="width: 100%;">View Growth Chart</a>
                 </div>
             </div>
 
-            <!-- Quick Actions -->
-            <div class="card animate-slide-up delay-600">
-                <h3 class="mb-3">Quick Actions</h3>
-                <div class="d-flex flex-column" style="gap: 1rem;">
-                    <a href="my-appointments.html" class="btn btn-primary text-center">
-                        <i class="fas fa-plus-circle mr-2"></i> Request Appointment
-                    </a>
-                    <a href="my-child.html" class="btn btn-outline text-center">
-                        <i class="fas fa-clipboard-list mr-2"></i> View Vaccination Schedule
-                    </a>
-                    <button class="btn btn-outline text-center">
-                        <i class="fas fa-phone mr-2"></i> Contact Health Worker
-                    </button>
+            <!-- Right Column -->
+            <div class="right-column">
+                <!-- Upcoming Appointments -->
+                <div class="card">
+                    <h3>📅 Upcoming Appointments</h3>
+
+                    <div class="card"
+                        style="background: var(--background-color); padding: 16px; margin-bottom: 16px; box-shadow: none;">
+                        <div style="display: flex; gap: 12px;">
+                            <div style="background: white; padding: 8px; border-radius: 8px; height: fit-content;">
+                                🏥
+                            </div>
+                            <div>
+                                <div style="font-weight: 600;">Postpartum Visit</div>
+                                <div class="text-small text-muted">Jan 10, 2025 • 10:00 AM</div>
+                                <div class="text-small text-muted">Dr. Santos</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a href="my-appointments.html" class="btn btn-primary" style="width: 100%;">Request New
+                        Appointment</a>
+                </div>
+
+                <!-- Notifications -->
+                <div class="card">
+                    <div
+                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
+                        <h3>🔔 Notifications (3)</h3>
+                        <a href="#" class="text-small" style="color: var(--primary-color);">View All</a>
+                    </div>
+
+                    <div style="display: flex; flex-direction: column; gap: 16px;">
+                        <div style="display: flex; gap: 12px; align-items: flex-start;">
+                            <div style="color: var(--success-color); margin-top: 2px;"><i
+                                    class="fas fa-check-circle"></i></div>
+                            <div>
+                                <div style="font-size: 14px;">Appointment confirmed</div>
+                                <div class="text-small text-muted">2 hours ago</div>
+                            </div>
+                        </div>
+                        <div style="display: flex; gap: 12px; align-items: flex-start;">
+                            <div style="color: var(--warning-color); margin-top: 2px;"><i
+                                    class="fas fa-exclamation-circle"></i></div>
+                            <div>
+                                <div style="font-size: 14px;">Vaccine due in 3 days</div>
+                                <div class="text-small text-muted">Today</div>
+                            </div>
+                        </div>
+                        <div style="display: flex; gap: 12px; align-items: flex-start;">
+                            <div style="color: var(--primary-color); margin-top: 2px;"><i
+                                    class="fas fa-info-circle"></i></div>
+                            <div>
+                                <div style="font-size: 14px;">New health tip available</div>
+                                <div class="text-small text-muted">Yesterday</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
