--- a/reports.html
+++ b/reports.html
@@ -5,135 +5,148 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reports & Analytics - CCHIS</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="css/doctor-theme.css">
 </head>
 
 <body>
     <!-- Sidebar -->
     <nav class="sidebar">
         <div class="sidebar-header">
-            <div class="sidebar-brand"><i class="fas fa-heartbeat"></i> CCHIS</div>
+            <i class="fas fa-heartbeat" style="margin-right: 10px;"></i> CCHIS
         </div>
         <div class="sidebar-menu">
             <a href="doctor-dashboard.html" class="menu-item">
-                <i class="fas fa-home"></i> Dashboard
+                <i class="fas fa-home"></i> <span>Dashboard</span>
             </a>
             <a href="profiles.html" class="menu-item">
-                <i class="fas fa-users"></i> Profiles
+                <i class="fas fa-users"></i> <span>Patient List</span>
             </a>
             <a href="postpartum.html" class="menu-item">
-                <i class="fas fa-procedures"></i> Postpartum
+                <i class="fas fa-procedures"></i> <span>Postpartum</span>
             </a>
             <a href="growth.html" class="menu-item">
-                <i class="fas fa-baby"></i> Child Growth
+                <i class="fas fa-baby"></i> <span>Child Growth</span>
             </a>
             <a href="reports.html" class="menu-item active">
-                <i class="fas fa-chart-bar"></i> Reports
+                <i class="fas fa-chart-bar"></i> <span>Reports</span>
             </a>
             <a href="appointment-requests.html" class="menu-item">
-                <i class="fas fa-calendar-check"></i> Appointments
+                <i class="fas fa-calendar-check"></i> <span>Requests</span>
             </a>
             <a href="index.html" class="menu-item"
-                style="margin-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1);">
-                <i class="fas fa-sign-out-alt"></i> Logout
+                style="margin-top: auto; border-top: 1px solid rgba(255,255,255,0.1);">
+                <i class="fas fa-sign-out-alt"></i> <span>Logout</span>
             </a>
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="top-bar">
-            <h2>Reports & Analytics</h2>
-            <div class="user-profile">
-                <div class="notification-bell" style="margin-right: 1.5rem; position: relative; cursor: pointer;">
-                    <i class="fas fa-bell" style="font-size: 1.2rem; color: var(--text-muted);"></i>
-                    <span class="badge"
-                        style="position: absolute; top: -5px; right: -5px; background: var(--danger-color); color: white; border-radius: 50%; padding: 2px 5px; font-size: 0.7rem;">5</span>
+    <!-- Top Navigation Bar -->
+    <header class="top-bar">
+        <div class="search-bar">
+            <i class="fas fa-search"></i>
+            <input type="text" placeholder="Search reports...">
+        </div>
+        <div class="user-nav">
+            <div class="notification-bell">
+                <i class="fas fa-bell"></i>
+                <span class="notification-badge">5</span>
+            </div>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <div style="text-align: right; line-height: 1.2;">
+                    <div style="font-weight: 600; font-size: 14px;">Dr. Maria Clara</div>
+                    <div style="font-size: 11px; color: var(--text-secondary);">Midwife</div>
                 </div>
-                <div class="user-avatar">MC</div>
-                <div>
-                    <div style="font-weight: 600;">Dr. Maria Clara</div>
-                    <div style="font-size: 0.8rem; color: var(--text-muted);">Midwife</div>
-                </div>
+                <div
+                    style="width: 36px; height: 36px; background: var(--primary-color); color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 600;">
+                    MC</div>
             </div>
         </div>
+    </header>
 
-        <div class="card mb-3 animate-slide-up delay-100">
-            <div class="d-flex justify-between align-center">
-                <div class="d-flex align-center" style="gap: 1rem;">
-                    <select class="form-control" style="width: 150px;">
-                        <option>This Month</option>
-                        <option>Last Month</option>
-                        <option>This Quarter</option>
-                        <option>This Year</option>
-                    </select>
-                    <button class="btn btn-primary">Apply Filter</button>
-                </div>
-                <button class="btn btn-outline" id="download-report"><i class="fas fa-download"></i> Download PDF
-                    Report</button>
+    <!-- Main Content -->
+    <main class="main-content">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;">
+            <h1>Reports & Analytics</h1>
+            <div style="display: flex; gap: 12px;">
+                <input type="date" class="form-control" style="width: auto;">
+                <button class="btn btn-secondary" id="download-report">
+                    <i class="fas fa-download"></i> Download PDF
+                </button>
             </div>
         </div>
 
         <!-- KPI Cards -->
         <div class="stats-grid">
-            <div class="stat-card animate-slide-up delay-200">
-                <div class="stat-info">
-                    <h3>124</h3>
-                    <p>Total Deliveries</p>
+            <div class="stat-card">
+                <div class="stat-header">
+                    <div class="stat-icon" style="background: rgba(102, 126, 234, 0.1); color: var(--primary-color);">
+                        <i class="fas fa-baby-carriage"></i>
+                    </div>
                 </div>
+                <div class="stat-value">124</div>
+                <div class="stat-label">Total Deliveries</div>
             </div>
-            <div class="stat-card animate-slide-up delay-300">
-                <div class="stat-info">
-                    <h3 class="text-success">95%</h3>
-                    <p>Immunization Rate</p>
+            <div class="stat-card" style="border-top-color: var(--success-color);">
+                <div class="stat-header">
+                    <div class="stat-icon" style="background: rgba(0, 184, 148, 0.1); color: var(--success-color);">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
+                <div class="stat-value">95%</div>
+                <div class="stat-label">Visit Completion</div>
             </div>
-            <div class="stat-card animate-slide-up delay-400">
-                <div class="stat-info">
-                    <h3 class="text-warning">12%</h3>
-                    <p>High Risk Rate</p>
+            <div class="stat-card" style="border-top-color: var(--warning-color);">
+                <div class="stat-header">
+                    <div class="stat-icon" style="background: rgba(253, 203, 110, 0.1); color: var(--warning-color);">
+                        <i class="fas fa-syringe"></i>
+                    </div>
                 </div>
+                <div class="stat-value">88%</div>
+                <div class="stat-label">Imm. Coverage</div>
             </div>
-            <div class="stat-card animate-slide-up delay-400">
-                <div class="stat-info">
-                    <h3>88%</h3>
-                    <p>Postpartum Follow-up</p>
+            <div class="stat-card" style="border-top-color: var(--error-color);">
+                <div class="stat-header">
+                    <div class="stat-icon" style="background: rgba(214, 48, 49, 0.1); color: var(--error-color);">
+                        <i class="fas fa-exclamation-triangle"></i>
+                    </div>
                 </div>
+                <div class="stat-value">12</div>
+                <div class="stat-label">High Risk Cases</div>
             </div>
         </div>
 
-        <div class="d-flex" style="gap: 1.5rem; flex-wrap: wrap; margin-bottom: 1.5rem;">
-            <div style="flex: 1; min-width: 400px;" class="animate-slide-up delay-300">
-                <div class="card" style="height: 100%;">
-                    <div class="card-header">Monthly Deliveries Trend</div>
+        <!-- Charts Grid -->
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px; margin-bottom: 24px;">
+            <div class="card">
+                <div class="card-header">Monthly Deliveries</div>
+                <div style="height: 300px;">
                     <canvas id="deliveriesChart"></canvas>
                 </div>
             </div>
-            <div style="flex: 1; min-width: 300px;" class="animate-slide-up delay-400">
-                <div class="card" style="height: 100%;">
-                    <div class="card-header">Postpartum Visit Completion</div>
-                    <div style="max-width: 300px; margin: 0 auto;">
-                        <canvas id="visitsChart"></canvas>
-                    </div>
+            <div class="card">
+                <div class="card-header">Visit Completion Rate</div>
+                <div style="height: 300px; display: flex; justify-content: center;">
+                    <canvas id="visitsChart"></canvas>
                 </div>
             </div>
         </div>
 
-        <div class="d-flex" style="gap: 1.5rem; flex-wrap: wrap;">
-            <div style="flex: 1; min-width: 400px;" class="animate-slide-up delay-400">
-                <div class="card" style="height: 100%;">
-                    <div class="card-header">Immunization Coverage</div>
+        <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 24px;">
+            <div class="card">
+                <div class="card-header">Immunization Coverage</div>
+                <div style="height: 300px;">
                     <canvas id="immCoverageChart"></canvas>
                 </div>
             </div>
-            <div style="flex: 1; min-width: 300px;" class="animate-slide-up delay-400">
-                <div class="card" style="height: 100%;">
-                    <div class="card-header">Risk Distribution</div>
-                    <div style="max-width: 300px; margin: 0 auto;">
-                        <canvas id="riskChart"></canvas>
-                    </div>
+            <div class="card">
+                <div class="card-header">Risk Distribution</div>
+                <div style="height: 300px; display: flex; justify-content: center;">
+                    <canvas id="riskChart"></canvas>
                 </div>
             </div>
         </div>
